# nuc2bit

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: main.yml
benches/: bit2nuc.rs  complement.rs  nuc2bit.rs  utils.rs
src/: bit2nuc.rs  check.rs  complement.rs  hamming.rs  lib.rs  nuc2bit.rs  popcount.rs  utils.rs
