[package]
name = "nuc2bit"
version = "0.1.0"
authors = ["c0deb0t <daniel.liu02@gmail.com>", "Pierre Marijon <pierre.marijon@hhu.de>"]
description = "Fast way to convert nucleotide in 2 bit representation"
license = "MIT"
repository = "https://github.com/natir/nuc2bit"
homepage = "https://github.com/natir/nuc2bit"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
